[gd_scene load_steps=9 format=2]

[ext_resource path="res://scenes/board_member_button.tscn" type="PackedScene" id=1]
[ext_resource path="res://assets/fonts/Roboto-Bold.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://scripts/board.gd" type="Script" id=3]
[ext_resource path="res://assets/style_board_member_button.tres" type="StyleBox" id=4]
[ext_resource path="res://assets/icons/plus-white.png" type="Texture" id=5]

[sub_resource type="DynamicFont" id=1]
size = 18
font_data = ExtResource( 2 )

[sub_resource type="StyleBoxFlat" id=2]
content_margin_left = 10.0
content_margin_right = 10.0
bg_color = Color( 1, 1, 1, 0.235294 )
corner_radius_top_left = 4
corner_radius_top_right = 4
corner_radius_bottom_right = 4
corner_radius_bottom_left = 4

[sub_resource type="StyleBoxFlat" id=3]
content_margin_left = 10.0
content_margin_right = 10.0
bg_color = Color( 1, 1, 1, 0.156863 )
corner_radius_top_left = 4
corner_radius_top_right = 4
corner_radius_bottom_right = 4
corner_radius_bottom_left = 4

[node name="Board" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 1
size_flags_horizontal = 3
size_flags_vertical = 3
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BackgroundColor" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
color = Color( 0, 0.47451, 0.74902, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MarginContainer" type="MarginContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
custom_constants/margin_right = 10
custom_constants/margin_top = 10
custom_constants/margin_left = 10
custom_constants/margin_bottom = 10
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
margin_left = 10.0
margin_top = 10.0
margin_right = 1014.0
margin_bottom = 590.0
custom_constants/separation = 10

[node name="BoardInfoContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
margin_right = 1004.0
margin_bottom = 32.0
rect_min_size = Vector2( 0, 32 )

[node name="TitleLabel" type="Label" parent="MarginContainer/VBoxContainer/BoardInfoContainer"]
margin_top = 1.0
margin_right = 603.0
margin_bottom = 31.0
size_flags_horizontal = 3
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_fonts/font = SubResource( 1 )
text = "Board Name"
clip_text = true

[node name="HSplitContainer" type="HSplitContainer" parent="MarginContainer/VBoxContainer/BoardInfoContainer"]
margin_left = 607.0
margin_right = 807.0
margin_bottom = 32.0
rect_min_size = Vector2( 200, 0 )

[node name="BoardMembers" type="HBoxContainer" parent="MarginContainer/VBoxContainer/BoardInfoContainer"]
margin_left = 811.0
margin_right = 811.0
margin_bottom = 32.0

[node name="BoardOwnerButton" parent="MarginContainer/VBoxContainer/BoardInfoContainer" instance=ExtResource( 1 )]

[node name="AddBoardMemberButton" type="Button" parent="MarginContainer/VBoxContainer/BoardInfoContainer"]
margin_left = 855.0
margin_right = 891.0
margin_bottom = 32.0
rect_min_size = Vector2( 36, 0 )
hint_tooltip = "Add Board Member"
mouse_default_cursor_shape = 2
custom_colors/font_color_disabled = Color( 1, 1, 1, 1 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_color_hover = Color( 1, 1, 1, 1 )
custom_colors/font_color_pressed = Color( 1, 1, 1, 1 )
custom_styles/hover = SubResource( 2 )
custom_styles/pressed = SubResource( 2 )
custom_styles/focus = SubResource( 2 )
custom_styles/normal = ExtResource( 4 )
icon = ExtResource( 5 )
expand_icon = true

[node name="ShowMenuButton" type="Button" parent="MarginContainer/VBoxContainer/BoardInfoContainer"]
margin_left = 895.0
margin_right = 1004.0
margin_bottom = 32.0
mouse_default_cursor_shape = 2
custom_colors/font_color_disabled = Color( 1, 1, 1, 1 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_color_hover = Color( 1, 1, 1, 1 )
custom_colors/font_color_pressed = Color( 1, 1, 1, 1 )
custom_styles/hover = SubResource( 2 )
custom_styles/pressed = SubResource( 2 )
custom_styles/focus = SubResource( 2 )
custom_styles/normal = SubResource( 3 )
text = "... Show Menu"

[node name="ListContainerScroll" type="ScrollContainer" parent="MarginContainer/VBoxContainer"]
margin_top = 42.0
margin_right = 1004.0
margin_bottom = 580.0
mouse_filter = 1
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="ListContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer/ListContainerScroll"]
margin_right = 280.0
margin_bottom = 538.0
size_flags_vertical = 3
custom_constants/separation = 10

[node name="AddListButton" type="Button" parent="MarginContainer/VBoxContainer/ListContainerScroll/ListContainer"]
margin_right = 280.0
margin_bottom = 40.0
rect_min_size = Vector2( 280, 40 )
mouse_default_cursor_shape = 2
size_flags_vertical = 0
custom_colors/font_color_disabled = Color( 1, 1, 1, 1 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_color_hover = Color( 1, 1, 1, 1 )
custom_colors/font_color_pressed = Color( 1, 1, 1, 1 )
custom_styles/hover = SubResource( 2 )
custom_styles/pressed = SubResource( 2 )
custom_styles/focus = SubResource( 2 )
custom_styles/normal = SubResource( 3 )
text = "+ Add List"
align = 0

[node name="FullScreenOverlay" type="ColorRect" parent="."]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
size_flags_horizontal = 3
size_flags_vertical = 3
color = Color( 0, 0, 0, 0.501961 )
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="pressed" from="MarginContainer/VBoxContainer/BoardInfoContainer/AddBoardMemberButton" to="." method="_on_AddBoardMemberButton_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/BoardInfoContainer/ShowMenuButton" to="." method="_on_ShowMenuButton_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/ListContainerScroll/ListContainer/AddListButton" to="." method="_on_AddListButton_pressed"]
